--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "3.0",
         "laravelcollective/html": "^6.2",
+        "livewire/livewire": "^2.4",
         "spatie/laravel-permission": "^4.0"
     },
     "require-dev": {
