--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/ui": "3.0",
         "laravelcollective/html": "^6.2",
         "livewire/livewire": "^2.4",
+        "maatwebsite/excel": "^3.1",
         "spatie/laravel-permission": "^4.0"
     },
     "require-dev": {
